test/semantic_analysis/program.mj
program MJProgram

	const char ch = 'c';
	char x, y[];
	const bool m = false;
	const int g = 11;

	class Klasa { int x, y[]; }

{
	void main() int a, b[]; int x[], y; char eol; {
        // a = b; // error
        // a = 3 + b; // error
        // a = 3 + b*2; // error
        // a = 3 + b[2]*2; // ok
        // g = 3; // error
        // a = 3; // ok
        // x = new int[4]; // ok
        // x[2] = a; // ok
        // x = a; // ok
        // x[3]  = x[4]; // ok
        // x = null; // ok

        // x++; // error
        // x[2]--; // ok
        // g--; // error
        // a++; // ok
        // eol++; // error

        // read(a); // ok
        // read(eol); // ok
        // read(x); // error
        // read(x[2]); // ok

        // print(1); // ok
        // print(a); // ok
        // print(eol); // ok
        // print(false); // ok

        // print(1, 4); // ok
        // print(a, 4); // ok
        // print(eol, 4); // ok
        // print(false, 4); // ok

        // print(x); // error
        // print(x[2]); // ok

        // print(x, 4); // error
        // print(x[2], 4); // ok

        // if (b != null)a++; // ok
        // if (b >= null) a++; // error

	}

    bool m1(int param1, int param2) int m, b[]; int x[], y; {

        // m2(); // error
        return true;
    }

    char m2() int m, b[]; int x[], y; bool z; {
        // m1(); // ok
        // m = m1(); // error
        // z = m1(); // ok

        // break; // error
        // continue; // error
        do{
            // continue; // ok
            // break; // error
            // continue; // error (loopCounter == 0)
            do{
                // break; // ok
            }while(true);
        }while(true);
        // break; // error
        // continue; // error

        // if (true && m < 2)m++; // ok
        // if (true && m == 2 || z && m < 2)m++; // ok

        return 'a';
    }

    int f1(int x) {return 1;}
    bool boolfunc(int x){return false;}
    int f2(int x, bool b, int g) int a; {return f1(x) + a + 1;}
    int func1(bool x){return 1;}

    int f3() int a, x, b[]; bool c[]; Klasa k; {

        // f2(f2(1, false, 2), true, f2(1, false, 6)); // ok
        // f2(f2(1, false), true, f2(1, false, 6)); // error
        // f2(f2(1, false), 'z', f2(1, false, 6)); // error
        // a(1, 2, 3); // error

        // a = f1 map b; // ok
        // a = f1 map c; // error
        // a = x map b; // error
        // a = f2 map b; // error
        // a = func1 map b; // error
        // a = boolfunc map b; // error

        k = new Klasa();

        return 1;
    }

}